--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@discordjs/voice": "^0.19.0",
     "@snazzah/davey": "^0.1.9",
     "discord.js": "^14.25.1",
-    "dotenv": "^17.2.3"
+    "dotenv": "^17.2.3",
+    "play-dl": "^1.9.7"
   }
 }
